arrow alignment fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -230,8 +230,7 @@ body {
 }
 
 .arrow {
-	width: 16px;
-	height: 16px;
+	margin-top: 1px;
 }
 
 .arrow svg {
